--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>PSD 2 HTML - Grid ex!</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -64,12 +66,20 @@
                 <a href="#" class="more">Continue Reading</a>
             </div>
 
-            <div class="second-panel">
+            <div class="second-panel grid">
                 <div class="images images-wrapper grid">
-                        <h2 class="image-item placeholder">CSS Grid Comes Here!</h2>
+                    <img class="card-image tree" src="images/image-001.jpg" alt="">
+                    <img class="card-image shibolet" src="images/image-002.jpg" alt="">
+                    <img class="card-image sun" src="images/image-003.jpg" alt="">
                 </div>
+                <section class="social-wrapper justify-center flex">
+                    <a class="fa fa-facebook-f flex" href="#"></a>
+                    <a class="fa fa-twitter flex" href="#"></a>
+                    <a class="fa fa-dribbble flex" href="#"></a>
+                    <a class="fa fa-behance-square flex" href="#"></a>
+                </section>
             </div>
-
+        
         </section>
 
         <section class="pager main-pager container flex space-between">
