narrow and mobile

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a href="#">Contact</a>
                     </li>
                 </ul>
-                <button class="toggle-menu-btn fa" onclick="toggleMenu()" alt="Open main menu"></button>
+                <button class="toggle-menu-btn hamburger" onclick="toggleMenu()" alt="Open main menu"></button>
                 <div class="toggle-menu-screen screen" onclick="toggleMenu()" alt="toggle main menu"></div>
             </nav>
 
@@ -66,7 +66,7 @@
                 <a href="#" class="more">Continue Reading</a>
             </div>
 
-            <div class="second-panel grid">
+            <div class="second-panel ">
                 <div class="images images-wrapper grid">
                     <img class="card-image tree" src="images/image-001.jpg" alt="">
                     <img class="card-image shibolet" src="images/image-002.jpg" alt="">
@@ -82,7 +82,7 @@
         
         </section>
 
-        <section class="pager main-pager container flex space-between">
+        <section class="pager main-pager container flex space-around">
             <button class="prev">Previous</button>
             <button class="next">Next</button>
         </section>
